Mobile horizontal scroll fix

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,8 @@
 /* Set default fonts for the site */
 body, html {
   font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 h1, h2, h3, h4, h5, h6, .font-display {
   font-family: 'Lexend Exa', 'Lexend Deca', Arial, Helvetica, sans-serif;
